--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
      <ul class="search__display--list">
       <li class="search__display--item">
        <label class="search__display--label">Ip address</label>
-       <span class="search__display--data" id="ip-address">Loading</span>
+       <span class="search__display--data" id="ip-address">192.212.174.101</span>
       </li>
       <li class="search__display--item">
        <label class="search__display--label">Location</label>
-       <span class="search__display--data" id="location">Loading</span>
+       <span class="search__display--data" id="location">Brooklyn, NY 10001</span>
       </li>
       <li class="search__display--item">
        <label class="search__display--label">Timezone</label>
-       <span class="search__display--data" id="timezone">Loading</span>
+       <span class="search__display--data" id="timezone">UTC -05:00</span>
       </li>
       <li class="search__display--item">
        <label class="search__display--label">Isp</label>
-       <span class="search__display--data" id="isp">Loading</span>
+       <span class="search__display--data" id="isp">SpaceX Starling</span>
       </li>
      </ul>
     </div>
