--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
        id="search-input"
        class="search__input"
        placeholder="Search for any IP address or domain"
+       aria-label="IP address search"
       />
       <button class="search__button" aria-label="Submit search">
        <img src="/images/icon-arrow.svg" alt="search icon" />
